<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/number1"
        android:layout_width="84dp"
        android:layout_height="41dp"
        android:text="@string/Number1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        android:hint="@string/Number1"/>

    <TextView
        android:id="@+id/number2"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:text="@string/Number2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332"
        android:hint="@string/Number2"/>

    <EditText
        android:id="@+id/inputField1"
        android:layout_width="222dp"
        android:layout_height="49dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|textPersonName"
        android:labelFor="@id/inputField1"
        app:layout_constraintBaseline_toBaselineOf="@+id/number1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/Number1"/>

    <EditText
        android:id="@+id/inputField2"
        android:layout_width="222dp"
        android:layout_height="49dp"
        android:contentDescription="@string/Number1"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|textPersonName"
        android:labelFor="@id/inputField2"
        app:layout_constraintBaseline_toBaselineOf="@+id/number2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/Number2"/>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonOk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/Number2"/>
</androidx.constraintlayout.widget.ConstraintLayout>